# lowlevelwind

./: .mch-ci.yml  00_download_forecast_data.ipynb  01_retrieve_process_precip.ipynb  02_download_forecast_data.ipynb  02_download_soil_temp.ipynb  02_download_soil_temp_forecasts.ipynb  03_calculate_wind_speed.ipynb  1_Data_Retrieval_and_Preprocessing.ipynb  1_Precipitation.ipynb  Dockerfile  Jenkinsfile  README.md  check_notebooks.py  computing_nx_ny.md  extract.py  index.html  install_eccodes.sh  install_python.sh  pyproject.toml  regrid.py  style-white.json
clean_notebooks/: 01_retrieve_process_precip_clean.ipynb  02_download_soil_temp_forecasts.ipynb
developer_notebooks/: 01_retrieve_process_precip_clean.ipynb  02_download_soil_temp_clean.ipynb  02_download_soil_temp_forecasts.ipynb  03_calculate_wind_speed_clean.ipynb  04_determine_relativ_hum.ipynb
lambda/: lambda_function.py
