[tool.poetry]
name = "opendata-nwp-demos"
version = "0.1.0"
description = ""
authors = ["ninaburg <nina.burg@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.11"
meteodata-lab = "~0.3"
earthkit-plots = "^0.3"
ipykernel = "^6.29.5"
rasterio = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
