[tool.poetry]
name = "opendata-nwp-demos"
version = "0.1.0"
description = "Notebook examples using model data for the Open Government Data initiative"
authors = ["MeteoSwiss"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "~3.11"
meteodata-lab = {extras = ["regrid"], version = "~0.4"}
earthkit-plots = "^0.3"
ipykernel = "^6.29.5"
rasterio = "^1.4.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
nbconvert = "^7.16.6"
nbformat = "^5.10.4"


[tool.poetry.group.nbformat.dependencies]
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
